// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportCard expect to render without error 1`] = `
<Card
  widget-id="REF_ID"
>
  <CardHeader>
    <TextContent>
      <Grid>
        <GridItem
          span={11}
        >
          <Text
            component="h2"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "fontWeight": "500",
              }
            }
          >
            <Truncate
              ellipsis="…"
              lines={1}
              trimWhitespace={false}
              width={0}
            >
              Policy Name
               
            </Truncate>
          </Text>
        </GridItem>
        <GridItem
          span={1}
        >
          <Text
            component="h2"
            style={
              Object {
                "fontWeight": "500",
              }
            }
          >
            <PolicyPopover
              profile={
                Object {
                  "benchmark": Object {
                    "version": "0.1.5",
                  },
                  "businessObjective": Object {
                    "title": "BO",
                  },
                  "compliantHostCount": 10,
                  "id": "ID",
                  "name": "Test Policy",
                  "policy": Object {
                    "benchmark": Object {
                      "version": "0.1.4",
                    },
                    "id": "policyid",
                    "name": "Policy Name",
                  },
                  "refId": "REF_ID",
                  "totalHostCount": 15,
                }
              }
            />
          </Text>
        </GridItem>
      </Grid>
      <Grid>
        <GridItem
          span={12}
        >
          <Text>
            Operating system: RHEL 
          </Text>
        </GridItem>
        <GridItem
          span={12}
        >
          <Text>
            SSG version: 
            0.1.5
          </Text>
        </GridItem>
        <GridItem
          className="pf-u-m-sm"
        />
        <GridItem
          span={12}
          style={
            Object {
              "display": "inline-flex",
            }
          }
        >
          <TextContent>
            <span
              style={
                Object {
                  "fontSize": "30px",
                  "fontWeight": "bold",
                }
              }
            >
              10
            </span>
            <span
              style={
                Object {
                  "fontWeight": "500",
                }
              }
            >
               
              of
               
            </span>
            <span
              style={
                Object {
                  "fontSize": "30px",
                  "fontWeight": "bold",
                }
              }
            >
              15
            </span>
          </TextContent>
        </GridItem>
        <GridItem
          span={12}
        >
          <Text>
            Systems meet compliance threshold
          </Text>
        </GridItem>
      </Grid>
    </TextContent>
  </CardHeader>
  <CardBody>
    <Grid>
      <GridItem
        span={12}
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <div
          className="chart-inline"
        >
          <div
            className="card-chart-container"
          >
            <ChartDonut
              data={
                Array [
                  Object {
                    "x": "Compliant",
                    "y": 10,
                  },
                  Object {
                    "x": "Non-compliant",
                    "y": 5,
                  },
                ]
              }
              height={300}
              identifier="TestPolicy"
              innerRadius={122}
              subTitle="Compliant"
              themeColor="blue"
              themeVariant="light"
              title="66%"
              width={300}
            />
          </div>
        </div>
      </GridItem>
    </Grid>
  </CardBody>
  <CardFooter>
    <Grid>
      <GridItem
        span={6}
      >
        <TextContent>
          <Text
            component="small"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            <Link
              to="/reports/ID"
            >
              View report
            </Link>
          </Text>
          <Text
            component="small"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            <Link
              to="/scappolicies/policyid"
            >
              View policy
            </Link>
          </Text>
        </TextContent>
      </GridItem>
    </Grid>
  </CardFooter>
</Card>
`;

exports[`ReportCard onMousover/onMouseout changes to state to the full policy name on hover and back to truncated 1`] = `
Object {
  "cardTitleTruncated": false,
}
`;

exports[`ReportCard onMousover/onMouseout changes to state to the full policy name on hover and back to truncated 2`] = `
Object {
  "cardTitleTruncated": true,
}
`;
